# fleshborn

./: Cargo.toml  README.md
assets/: Grass.tsx  isometric_map.tmx  items.json
assets/certificates/: cert.pem  digest.txt  generate.sh  key.pem
src/: config.rs  main.rs
src/components/: common.rs  items.rs  mod.rs  player.rs
src/game/: app.rs  common.rs  items.rs  mod.rs  player.rs
src/network/: client.rs  mod.rs  protocol.rs  server.rs  shared.rs
src/render/: mod.rs  render_2d.rs  render_3d.rs  ui.rs
src/resources/: items.rs
src/systems/: items.rs  mod.rs
src/systems/player/: init.rs  mod.rs
src/ui/: ui.rs
src/utils/: common.rs  macros.rs  mod.rs  settings.rs
