[package]
name = "bevy-pz"
version = "0.1.0"
edition = "2021"

[lints.rust]
unused = "allow"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.14.1", features = ["dynamic_linking"] }
tiled = "0.12.0"
rustc-hash = "2.0.0"
smallvec = { version = "1.13.2", features = ["serde"] }
serde = "1.0.208"
serde_json = "1.0.125"
rand = "0.8.5"
bevy_ecs_tiled = "0.3"
bevy_ecs_tilemap = "0.14"
bevy-inspector-egui = "0.25.2"
lightyear = "0.17.1"
