[package]
name = "fleshborn"
version = "0.0.1"
edition = "2021"
authors = ["Brenna Conovali <contact@br3nnabee.info>"]
license = "AGPL-3.0-only"
description = "Isometric zombie survival game"
repository = "https://github.com/br3nnabee/fleshborn"
keywords = ["game", "bevy", "rust"]
categories = ["game-engine", "2d", "3d"]

[features]
default = []
gui = []
client = ["gui"]
server = []


[profile.dev]
opt-level = 1
debug = true
overflow-checks = true
lto = false
codegen-units = 8

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false
overflow-checks = false
panic = "abort"

[dependencies]
bevy = { version = "0.15", features = ["dynamic_linking"] }
lightyear = { version = "0.18", features = ["leafwing", "webtransport"] }
bevy-inspector-egui = "0.28"
leafwing-input-manager = "0.16"
rustc-hash = "2.1.0"
iyes_perf_ui = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
async-compat = "0.2"
cfg-if = "1.0"
crossbeam-channel = "0.5"
rand_core = "0.6"
bevy_rand = { version = "0.9", features = ["thread_local_entropy", "wyrand"] }
